@@ -19,6 +19,7 @@ Fixes and Minor Enhancements:
 * When working with a Desktop folder, there is no longer an unnecessary notification of a reserve save path.
 * If the last saved path does not exist, it now goes to the parent folder, if there is one.
 * After creating a new database, the path to it is now remembered when returning to the file system.
+* Smarter behavior of the Esc key when working with the database.
 * Added some shortcuts.
 
 ---
